--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,3 +69,12 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
+repositories {
+    flatDir {
+         dirs 'src/main/libs'
+    }
+}
+dependencies {
+    api(name:'gomobilelib', ext:'aar')
+}
